--- a/payment.html
+++ b/payment.html
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AbJ0raGuU7SuHEZUoD_3JAZ4zhlgpI27oUcC0bNvLVuTmC4vgCPyfrvgZzkOX71F31xQgKRiB7P4_lre&currency=USD" data-sdk-integration-source="button-factory"></script>
   <script>
   function initPayPalButton() {
     var description = document.querySelector('#smart-button-container #description');
